# ASI_proj

./: .gitignore  LICENSE  README.md
app/: .gitignore  README.md  docker-compose.yml
app/api/: api.Dockerfile  requirements.txt
app/api/src/: main.py  predictor.py  schemas.py
app/gui/: gui.Dockerfile
app/gui/src/: gui.py
notebooks/: .gitignore  README.md  explore_data.ipynb  little_help.py  play.ipynb
pipeline/income-evaluation/: .env_example  .gitignore  README.md  api.Dockerfile  docker-compose.yml  gui.Dockerfile  pyproject.toml  requirements.txt
pipeline/income-evaluation/conf/base/: catalog.yml
pipeline/income-evaluation/requirements/: base.txt
pipeline/income-evaluation/src/: gui.py  main.py
pipeline/income-evaluation/src/income_evaluation/: __init__.py  __main__.py  router.py  settings.py  utils.py
pipeline/income-evaluation/src/income_evaluation/pipelines/create_model/: nodes.py  pipeline.py
pipeline/income-evaluation/tools/: test.py
